remove '(BMES)' and fix width sizing problem when there's a scrollbar

--- a/portfolio/css/poster.css
+++ b/portfolio/css/poster.css
@@ -1,6 +1,5 @@
 .page-content {
-    width: 100vw;
-    max-width: 100%;
+    width: 100%;
     position: relative;
 }
 
